--- a/res/xml/derpquest_settings_statusbar.xml
+++ b/res/xml/derpquest_settings_statusbar.xml
@@ -28,6 +28,13 @@
         </PreferenceScreen>
     </PreferenceCategory>
 
+    <!-- Status Bar Logo Style -->
+    <Preference
+        android:key="status_bar_logo"
+        android:title="@string/status_bar_logo_category_title"
+        android:summary="@string/status_bar_logo_category_summary"
+        android:fragment="com.derpquest.settings.fragments.StatusBarLogo" />
+
     <PreferenceCategory
         android:title="@string/network_traffic_state_title">
         <ListPreference
