--- a/res/values/derpquest_strings.xml
+++ b/res/values/derpquest_strings.xml
@@ -204,7 +204,7 @@
 
     <!-- Buttons - Enable navbar -->
     <string name="disable_navkeys_title">Enable on-screen nav bar</string>
-    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
+    <string name="disable_navkeys_summary">Enable on-screen navigation bar</string>
 
     <!-- Status bar - icons -->
     <string name="status_bar_icons_title">Status bar icons</string>
