--- a/res/values/derpquest_strings.xml
+++ b/res/values/derpquest_strings.xml
@@ -491,4 +491,11 @@
     <string name="status_bar_logo_disabled">Disabled</string>
     <string name="status_bar_logo_style_title">DerpQuest logo style</string>
     <string name="status_bar_logo_color_title">Select color</string>
+
+    <!-- Screen Off animation -->
+    <string name="screen_off_animation_title">Screen off animation</string>
+    <string name="screen_off_animation_summary">Customize your screen off animations</string>
+    <string name="screen_off_animation_default">Default</string>
+    <string name="screen_off_animation_crt">CRT</string>
+    <string name="screen_off_animation_scale">Scale</string>
 </resources>
