--- a/res/xml/derpquest_settings_misc.xml
+++ b/res/xml/derpquest_settings_misc.xml
@@ -31,12 +31,11 @@
         android:defaultValue="false" />
     
     <com.derpquest.settings.preference.SystemSettingMasterSwitchPreference
-       
-<Preference
         android:key="screen_off_anim"
         android:fragment="com.derpquest.settings.fragments.ScreenOffAnim"
         android:title="@string/screen_off_animation_title"
-        android:summary="@string/screen_off_animation_summary" />
+        android:summary="@string/screen_off_animation_summary"
+        android:defaultValue="false" />
 
     <PreferenceCategory
         android:key="aspect_ratio_category"
